Fixed position spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -43,10 +43,10 @@ label {
 
 header p {
     position: relative;
-    top: 1em;
+    top: 2em;
 }
 
 main {
     position: relative;
-    top: 1em;
+    top: 2em;
 }
